# serialport-fan-controller

./: .gitignore  Cargo.toml  README.md  flash.sh  partitions_singleapp_large_2mb.csv  partitions_singleapp_large_4mb.csv  rsync.sh  test.sh
script/: truenas.core.sh
src/: main.rs
